Fix minor UI issues and make a few minor updates
- Added animation for setting button spin to tailwind config.

- Added color-scheme:dark to css for dark scrollbars.

- Moved font size from font-tab to card-tab.

--- a/apps/www-test/src/index.css
+++ b/apps/www-test/src/index.css
@@ -5,6 +5,7 @@
 
 @layer base {
     :root {
+        color-scheme: dark;
         font-family:
             Roboto Mono,
             monospace,
